unpackaged/main/default/objects/Fellow_Application__c/fields/GRAD_Degree_s_if_not_listed__c.field-meta.xml
<CustomField>
    <fullName>GRAD_Degree_s_if_not_listed__c</fullName>
    <label>GRAD Degree(s), if not listed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>