unpackaged/main/default/objects/Fellow_Application__c/fields/GRAD_Dual_Degree_School_in_University__c.field-meta.xml
<CustomField>
    <fullName>GRAD_Dual_Degree_School_in_University__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>GRAD Dual Degree School in University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fellow Applications (GRAD Dual Degree School in University)</relationshipLabel>
    <relationshipName>Fellow_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>