unpackaged/main/default/objects/Fellow_Application__c/fields/Grad_Level_Finance__c.field-meta.xml
<CustomField>
    <fullName>Grad_Level_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grad Level Finance</label>
    <type>Checkbox</type>
</CustomField>