unpackaged/main/default/objects/Fellow_Application__c/fields/GRAD_University_Dual_Degree__c.field-meta.xml
<CustomField>
    <fullName>GRAD_University_Dual_Degree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GRAD University - Dual Degree</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fellow Applications (GRAD University - Dual Degree)</relationshipLabel>
    <relationshipName>Fellow_Applications_GRAD_University_Dual</relationshipName>
    <type>Lookup</type>
</CustomField>