unpackaged/main/default/objects/Fellow_Application__c/fields/How_Did_You_Find_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Find_Us__c</fullName>
    <description>Could be Picklist</description>
    <label>How did you find out about EDFCC?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campus Presentation with EDF staff</fullName>
            </value>
            <value>
                <fullName>EDF Staff webinar</fullName>
            </value>
            <value>
                <fullName>Career services job posting</fullName>
            </value>
            <value>
                <fullName>Career Services staff</fullName>
            </value>
            <value>
                <fullName>EDF website</fullName>
            </value>
            <value>
                <fullName>Student group newsletter</fullName>
            </value>
            <value>
                <fullName>Word of Mouth  from an Alumni Fellow</fullName>
            </value>
            <value>
                <fullName>Word of Mouth from another source</fullName>
            </value>
            <value>
                <fullName>National Black MBA Conference</fullName>
            </value>
            <value>
                <fullName>Prospanica conference</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Online Job postings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>