unpackaged/main/default/objects/Fellow_Application__c/fields/Interview_1_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_1_Date_Time__c</fullName>
    <label>Interview 1 Date</label>
    <type>DateTime</type>
</CustomField>