unpackaged/main/default/objects/Fellow_Application__c/fields/Interview_2__c.field-meta.xml
<CustomField>
    <fullName>Interview_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fellow Applications (Interview 2)</relationshipLabel>
    <relationshipName>Fellow_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>