unpackaged/main/default/objects/Fellow_Application__c/fields/Interviewer_1__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_1__c</fullName>
    <label>Interviewer 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaron Saliman</fullName>
            </value>
            <value>
                <fullName>Eileen Ashton</fullName>
            </value>
            <value>
                <fullName>Lauren Apollaro</fullName>
            </value>
            <value>
                <fullName>Sarrynna Sou</fullName>
            </value>
            <value>
                <fullName>Shimul Bijoor</fullName>
            </value>
            <value>
                <fullName>Tamara Evans</fullName>
            </value>
            <value>
                <fullName>Tanya Mahadwar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>