unpackaged/main/default/objects/Fellow_Application__c/fields/MSI_Applicant__c.field-meta.xml
<CustomField>
    <fullName>MSI_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the fellow applicant is applying from an Minority Serving Institution (MSI).</description>
    <inlineHelpText>This box is checked if the fellow applicant is applying from an Minority Serving Institution (MSI).</inlineHelpText>
    <label>MSI Applicant</label>
    <type>Checkbox</type>
</CustomField>