unpackaged/main/default/objects/Fellow_Application__c/fields/Notes_for_Matching__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Matching__c</fullName>
    <inlineHelpText>Selecting candidate base on:
	List top strengths
	Hard/soft skills
	Experience
Notes for defending match (if needed)</inlineHelpText>
    <label>Notes on Presenting Match</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>