unpackaged/main/default/objects/Fellow_Application__c/fields/Notes_on_Competing_Offer__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Competing_Offer__c</fullName>
    <label>Notes on Competing Offer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>