unpackaged/main/default/objects/Fellow_Application__c/fields/Offer_Letter_Sent_for_which_Host__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Sent_for_which_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer Letter Sent for which Host?</label>
    <referenceTo>Climate_Corps_Engagement__c</referenceTo>
    <relationshipLabel>Fellow Applications (Offer Letter Sent for which Host?)</relationshipLabel>
    <relationshipName>Fellow_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>