unpackaged/main/default/objects/Fellow_Application__c/fields/Original_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Creation_Date__c</fullName>
    <label>Original Creation Date</label>
    <type>DateTime</type>
</CustomField>