unpackaged/main/default/objects/Fellow_Application__c/fields/Photo_Identification_Name__c.field-meta.xml
<CustomField>
    <fullName>Photo_Identification_Name__c</fullName>
    <label>Photo Identification Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>