unpackaged/main/default/objects/Fellow_Application__c/fields/Project_Type_Preference__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Preference__c</fullName>
    <label>Project Type Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>