unpackaged/main/default/objects/Fellow_Application__c/fields/Project_Type_Preference_China__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Preference_China__c</fullName>
    <label>Project Type Preference China</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Agriculture</fullName>
            </value>
            <value>
                <fullName>Climate Commitments (goal setting/reporting/GHG accounting)</fullName>
            </value>
            <value>
                <fullName>Environmental and Climate Justice</fullName>
            </value>
            <value>
                <fullName>Food Waste</fullName>
            </value>
            <value>
                <fullName>Renewables and Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Supply Chain/Scope 3</fullName>
            </value>
            <value>
                <fullName>Sustainable Finance</fullName>
            </value>
            <value>
                <fullName>Zero Emission Vehicles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>