unpackaged/main/default/objects/Fellow_Application__c/fields/Project_Type_Preference_Sorted__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Preference_Sorted__c</fullName>
    <inlineHelpText>Shows the order in which it was saved by Applicant</inlineHelpText>
    <label>Project Type Preference Sorted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>