unpackaged/main/default/objects/Fellow_Application__c/fields/Pronouns_Self_Describe__c.field-meta.xml
<CustomField>
    <fullName>Pronouns_Self_Describe__c</fullName>
    <label>Pronouns Self Describe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>