unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Check_URL__c.field-meta.xml
<CustomField>
    <fullName>Reference_Check_URL__c</fullName>
    <description>URL for manually sending reference check</description>
    <formula>HYPERLINK("https://www.tfaforms.com/5078036?tfa_4=" &amp;Id, "https://www.tfaforms.com/5078036?tfa_4=" &amp;Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this URL if you need to resend ref check manually</inlineHelpText>
    <label>Reference Check URL</label>
    <type>Text</type>
</CustomField>