unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_Email_1__c</fullName>
    <label>Reference Email 1</label>
    <type>Email</type>
</CustomField>