unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_Email_2__c</fullName>
    <label>Reference Email 2</label>
    <type>Email</type>
</CustomField>