unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_Email_3__c</fullName>
    <label>Reference Email 3</label>
    <type>Email</type>
</CustomField>