unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_From__c.field-meta.xml
<CustomField>
    <fullName>Reference_From__c</fullName>
    <label>Reference From?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>CC Host Company</fullName>
            </value>
            <value>
                <fullName>CC Host City/Other</fullName>
            </value>
            <value>
                <fullName>CC Host University</fullName>
            </value>
            <value>
                <fullName>EDF Board</fullName>
            </value>
            <value>
                <fullName>EDF Donor</fullName>
            </value>
            <value>
                <fullName>EDF Staff</fullName>
            </value>
            <value>
                <fullName>EDFCC Staff</fullName>
            </value>
            <value>
                <fullName>Partner Organization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>