unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name_3__c</fullName>
    <label>Reference Name 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>