unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_Phone_1__c</fullName>
    <label>Reference Phone 1</label>
    <type>Phone</type>
</CustomField>