unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_Phone_3__c</fullName>
    <label>Reference Phone 3</label>
    <type>Phone</type>
</CustomField>