unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Special_Instructions_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_Special_Instructions_3__c</fullName>
    <label>Reference Relationship 3</label>
    <type>TextArea</type>
</CustomField>