unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Title_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_Title_2__c</fullName>
    <label>Reference Title 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>