unpackaged/main/default/objects/Fellow_Application__c/fields/Reference_Title_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_Title_3__c</fullName>
    <label>Reference Title 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>