unpackaged/main/default/objects/Fellow_Application__c/fields/Regions_in_China__c.field-meta.xml
<CustomField>
    <fullName>Regions_in_China__c</fullName>
    <label>Regions in China</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North China</fullName>
            </value>
            <value>
                <fullName>East China</fullName>
            </value>
            <value>
                <fullName>Central China</fullName>
            </value>
            <value>
                <fullName>South China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>