unpackaged/main/default/objects/Fellow_Application__c/fields/Regions_in_India_Sorted__c.field-meta.xml
<CustomField>
    <fullName>Regions_in_India_Sorted__c</fullName>
    <inlineHelpText>Order in which it was saved by Applicant</inlineHelpText>
    <label>Regions in India Sorted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>